# expiringsqlitedict

./: .gitignore  CHANGELOG.txt  LICENSE.rst  Makefile  README.md  README.rst  bench.py  expiringsqlitedict.py  justfile  pyproject.toml  run_all_tests.sh  setup.py  test.py
docs/: conf.py  expiringsqlitedict.rst  index.rst
src/expiringsqlitedict/: __init__.py
tests/: test_core.py  test_onimport.py
