[project]
name = 'expiringsqlitedict'
description = 'Persistent compressed expiring dict in Python, backed up by sqlite3 and json'
version = '7.0.4'
readme = 'README.md'
requires-python = '>= 3.6, < 4'
license = { text = 'MPL 2.0' }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Database :: Front-Ends',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
]

[[project.authors]]
name = "Taylor C. Richberger"
email = "taylor.richberger@procern.com"

[project.urls]
repository  = 'https://github.com/ProCern/expiringsqlitedict'
documentation = 'https://expiringsqlitedict.readthedocs.io/'

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4", 'wheel']

[project.optional-dependencies]
test = [
    'orjson',
]
